--- a/CChat/src/hr/chus/cchat/struts2/action/package_hr.properties
+++ b/CChat/src/hr/chus/cchat/struts2/action/package_hr.properties
@@ -26,6 +26,7 @@ menu.admin.search = Pretra\u017eivanje
 
 # Admin menu
 admin.operatorList.title = Lista operatera
+admin.main.title = CChat admin
 
 operator.null = Operator se mora zadati!
 operator.role.empty = Operator mora imati zadanu ulogu!
@@ -36,3 +37,5 @@ operator.password.toLong = Lozinka je preduga\u010dka! Max {0}
 operator.name.toLong = Ime je preduga\u010dko! Max {0}
 operator.surname.toLong = Prezime je preduga\u010dko! Max {0}
 operator.email.toLong = E-Mail je preduga\u010dak! Max {0}
+
+admin.picture.upload.alreadyExists = Slika sa tim imenom vec postoji!
