--- a/CChatAdminSmartGWT/src/hr/chus/client/smartgwt/client/i18n/Dictionary_hr.properties
+++ b/CChatAdminSmartGWT/src/hr/chus/client/smartgwt/client/i18n/Dictionary_hr.properties
@@ -53,3 +53,16 @@ emptySet = Prazna lista
 fieldIsRequired = Polje ne smije biti prazno
 invalidEmail = Nevažeća email adresa
 errors = Greške
+notSet = Nije zadano
+search = Pretraga
+operator = Operater
+serviceProvider = Pružatelj usluge
+msisdn = Broj telefona
+address = Adresa
+birthDate = Rođendan
+joinedDate = Datum dolaska
+notes = Bilješke
+shortCode = Kratki kod
+invalidDate = Neispravan datum
+fetchSize = Količina za dohvat
+sendMessage = Pošalji poruku
