--- a/CChatAdminSmartGWT/src/hr/chus/client/smartgwt/client/i18n/Dictionary_hr.properties
+++ b/CChatAdminSmartGWT/src/hr/chus/client/smartgwt/client/i18n/Dictionary_hr.properties
@@ -66,3 +66,10 @@ shortCode = Kratki kod
 invalidDate = Neispravan datum
 fetchSize = Količina za dohvat
 sendMessage = Pošalji poruku
+next = Sljedeći
+previous = Prethodni
+contactingServer = Kontaktiram server...
+findingRecordThatMatchCriteria = Tražim podatke koji odgovaraju vašim zahtjevima...
+deletingRecord = Brišem podatke...
+text = Tekst
+charactersAllowed = Dozvoljeno znakova
