--- a/CChat/src/hr/chus/cchat/struts2/action/package_hr.properties
+++ b/CChat/src/hr/chus/cchat/struts2/action/package_hr.properties
@@ -15,18 +15,8 @@ login.passwordRequired = Lozinka ne smije biti prazna
 # Prepare.action
 prepare.success = Baza uspje\u0161no postavljena
 
-# AdminMain.action
+# Admin
 admin.main.title = Admin
-menu.admin.main = Glavna
-menu.admin.operators = Operateri
-menu.admin.nicks = Nadimci
-menu.admin.pictures = Slike
-menu.admin.statistics = Statistika
-menu.admin.search = Pretra\u017eivanje
-
-# Admin menu
-admin.operatorList.title = Lista operatera
-admin.main.title = CChat admin
 
 operator.null = Operator se mora zadati!
 operator.role.empty = Operator mora imati zadanu ulogu!
@@ -37,5 +27,11 @@ operator.password.toLong = Lozinka je preduga\u010dka! Max {0}
 operator.name.toLong = Ime je preduga\u010dko! Max {0}
 operator.surname.toLong = Prezime je preduga\u010dko! Max {0}
 operator.email.toLong = E-Mail je preduga\u010dak! Max {0}
+
+nick.null = Nadimak se mora zadati!
+nick.name.empty = Nadimak se mora zadati!
+nick.name.toLong = Nadimak je preduga\u010dko! Max {0}.
+nick.description.toLong = Opis je preduga\u010dak! Max {0}.
+nick.name.exists = Nadimak ve\u0107 postoji!
 
 admin.picture.upload.alreadyExists = Slika sa tim imenom vec postoji!
