Sms message admin function and UI.

--- a/CChatAdminSmartGWT/src/hr/chus/client/smartgwt/client/i18n/Dictionary_hr.properties
+++ b/CChatAdminSmartGWT/src/hr/chus/client/smartgwt/client/i18n/Dictionary_hr.properties
@@ -73,3 +73,10 @@ findingRecordThatMatchCriteria = Tražim podatke koji odgovaraju vašim zahtjevi
 deletingRecord = Brišem podatke...
 text = Tekst
 charactersAllowed = Dozvoljeno znakova
+direction = Smjer
+receivedTime = Vrijeme primitka
+messages = Poruke
+sent = Poslane
+received = Primljene
+receivedTimeStart = Primljeno od
+receivedTimeEnd = Primljeno do
