--- a/CChatAdminSmartGWT/src/hr/chus/client/smartgwt/client/i18n/Dictionary_hr.properties
+++ b/CChatAdminSmartGWT/src/hr/chus/client/smartgwt/client/i18n/Dictionary_hr.properties
@@ -76,7 +76,8 @@ charactersAllowed = Dozvoljeno znakova
 direction = Smjer
 receivedTime = Vrijeme primitka
 messages = Poruke
-sent = Poslane
-received = Primljene
+sent = Poslana
+received = Primljena
 receivedTimeStart = Primljeno od
 receivedTimeEnd = Primljeno do
+statistics = Statistika
