--- a/CChatAdminSmartGWT/src/hr/chus/client/smartgwt/client/i18n/Dictionary_hr.properties
+++ b/CChatAdminSmartGWT/src/hr/chus/client/smartgwt/client/i18n/Dictionary_hr.properties
@@ -81,3 +81,6 @@ received = Primljena
 receivedTimeStart = Primljeno od
 receivedTimeEnd = Primljeno do
 statistics = Statistika
+settings = Postavke
+about = O autoru
+chatApp = Chat aplikacija
