--- a/CChatAdminSmartGWT/src/hr/chus/client/smartgwt/client/i18n/Dictionary_hr.properties
+++ b/CChatAdminSmartGWT/src/hr/chus/client/smartgwt/client/i18n/Dictionary_hr.properties
@@ -84,3 +84,15 @@ statistics = Statistika
 settings = Postavke
 about = O autoru
 chatApp = Chat aplikacija
+statisticsPerSP = Statistika po mobilnom operateru
+statisticsPerOperator = Statistika po operateru
+liveStatistics = Statistika uživo
+fromDate = Od datuma
+toDate = Do datuma
+statisticsType = Tip statistike
+graphicsLoading = Učitavam grafiku
+graphicsLoaded = Grafika učitana
+sum = Suma
+home = Dom
+header = Zaglavlje
+footer = Podnožje
