--- a/CChatAdminSmartGWT/src/hr/chus/client/smartgwt/client/i18n/Dictionary_hr.properties
+++ b/CChatAdminSmartGWT/src/hr/chus/client/smartgwt/client/i18n/Dictionary_hr.properties
@@ -1,4 +1,4 @@
-username = Korisničko ime
+username = Korisničko ime
 role = Uloga
 name = Ime
 surname = Prezime
@@ -41,7 +41,7 @@ pictureUploader = Postavi sliku
 picture = Slika
 upload = Postavi
 uploading = Postavljanje u tijeku...
-reqularConfirm = Da li ste sigurni?
+regularConfirm = Da li ste sigurni?
 close = Zatvori
 uploadDone = Postavljanje završeno!
 uploadFailed = Postavljanje neuspješno!
@@ -96,3 +96,4 @@ sum = Suma
 home = Dom
 header = Zaglavlje
 footer = Podnožje
+today = Danas
