Admin interface finished. Multilanguage support done (english and croatian for now).

--- a/CChat/src/hr/chus/cchat/struts2/action/package_hr.properties
+++ b/CChat/src/hr/chus/cchat/struts2/action/package_hr.properties
@@ -1,4 +1,5 @@
 # Global settings
+global.language = Jezik
 global.login = Prijava
 global.logout = Odjava
 global.username = Korisni\u010dko ime
@@ -34,4 +35,4 @@ nick.name.toLong = Nadimak je preduga\u010dko! Max {0}.
 nick.description.toLong = Opis je preduga\u010dak! Max {0}.
 nick.name.exists = Nadimak ve\u0107 postoji!
 
-admin.picture.upload.alreadyExists = Slika sa tim imenom vec postoji!
+admin.picture.upload.alreadyExists = Slika sa tim imenom ve\u0107 postoji!
