--- a/CChatAdminSmartGWT/src/hr/chus/client/smartgwt/client/i18n/Dictionary_hr.properties
+++ b/CChatAdminSmartGWT/src/hr/chus/client/smartgwt/client/i18n/Dictionary_hr.properties
@@ -76,8 +76,8 @@ charactersAllowed = Dozvoljeno znakova
 direction = Smjer
 receivedTime = Vrijeme primitka
 messages = Poruke
-sent = Poslana
-received = Primljena
+sent = Poslano
+received = Primljeno
 receivedTimeStart = Primljeno od
 receivedTimeEnd = Primljeno do
 statistics = Statistika
@@ -97,3 +97,4 @@ home = Dom
 header = Zaglavlje
 footer = Podnožje
 today = Danas
+pleaseSelectAFile = Morate odabrati datoteku
