--- a/CChat/src/hr/chus/cchat/struts2/action/package_hr.properties
+++ b/CChat/src/hr/chus/cchat/struts2/action/package_hr.properties
@@ -7,6 +7,9 @@ global.password = Lozinka
 global.noJavascript = U postavkama va\u0161eg web preglednika nije omogu\u0107eno izvr\u0161avanje Javascripta. Za uporabu ove aplikacije Javascript je neophodan.
 global.notLoggedIn = Niste prijavljeni
 global.role = Uloga
+global.loadingStyleAndImages = U\u010ditavanje izgleda i slika
+global.loadingApplication = U\u010ditavanje CChat aplikacije
+global.pleaseWait = Molimo pri\u010dekajte...
 
 # Login.action
 login.wrongUsernameOrPassword = Pogre\u0161no korisni\u010dko ime ili lozinka
