Operator active/inactive indicator and function to change status.

--- a/CChatSmartGWT/src/hr/chus/cchat/client/smartgwt/client/i18n/Dictionary_hr.properties
+++ b/CChatSmartGWT/src/hr/chus/cchat/client/smartgwt/client/i18n/Dictionary_hr.properties
@@ -100,3 +100,6 @@ today = Danas
 pleaseSelectAFile = Morate odabrati datoteku
 deleted = Obrisan
 noItemsToShow = Nema podataka za prikaz
+active = Aktivan
+notActive = Nije aktivan
+wouldYouLikeToActivateYourself = Niste aktivirani. Da li se želite aktivirati?
