--- a/CChat/src/hr/chus/cchat/struts2/action/package_en.properties
+++ b/CChat/src/hr/chus/cchat/struts2/action/package_en.properties
@@ -15,6 +15,7 @@ global.pleaseWait = Please wait...
 login.wrongUsernameOrPassword = Wrong username or password
 login.usernameRequired = Username is required
 login.passwordRequired = Password is required
+login.userIsDisabled = This user is disabled
 
 # Prepare.action
 prepare.success = Database successfully set
@@ -31,6 +32,7 @@ operator.password.toLong = Password is too long! Max {0}
 operator.name.toLong = Name is too long! Max {0}
 operator.surname.toLong = Surname is too long! Max {0}
 operator.email.toLong = E-mail is too long! Max {0}
+operator.admin.cantBeDisabled = Admin user can't be disabled
 
 nick.null = Nick name must be defied!
 nick.name.empty = Nick name must not be empty.
