--- a/CChat/src/hr/chus/cchat/struts2/action/package_hr.properties
+++ b/CChat/src/hr/chus/cchat/struts2/action/package_hr.properties
@@ -15,6 +15,7 @@ global.pleaseWait = Molimo pri\u010dekajte...
 login.wrongUsernameOrPassword = Pogre\u0161no korisni\u010dko ime ili lozinka
 login.usernameRequired = Korisni\u010dko ime ne smije biti prazno
 login.passwordRequired = Lozinka ne smije biti prazna
+login.userIsDisabled = Korisnik je onemogu\u0107en
 
 # Prepare.action
 prepare.success = Baza uspje\u0161no postavljena
@@ -31,6 +32,7 @@ operator.password.toLong = Lozinka je preduga\u010dka! Max {0}
 operator.name.toLong = Ime je preduga\u010dko! Max {0}
 operator.surname.toLong = Prezime je preduga\u010dko! Max {0}
 operator.email.toLong = E-Mail je preduga\u010dak! Max {0}
+operator.admin.cantBeDisabled = Korisnik admin ne moze biti onemogu\u0107en
 
 nick.null = Nadimak se mora zadati!
 nick.name.empty = Nadimak se mora zadati!
