--- a/CChat/src/hr/chus/cchat/struts2/action/package_en.properties
+++ b/CChat/src/hr/chus/cchat/struts2/action/package_en.properties
@@ -19,10 +19,13 @@ login.userIsDisabled = This user is disabled
 
 # Prepare.action
 prepare.success = Database successfully set
+prepare.title = Prepare database
 
 # Admin
 admin.main.title = Admin
 
+operator.disabled = Operator is disabled
+operator.notActive = Operator is not active
 operator.null = Operator must be set!
 operator.role.empty = Operator must have a role!
 operator.username.exists = Username already exists!
