--- a/CChat/src/hr/chus/cchat/struts2/action/package_hr.properties
+++ b/CChat/src/hr/chus/cchat/struts2/action/package_hr.properties
@@ -19,12 +19,15 @@ login.userIsDisabled = Korisnik je onemogu\u0107en
 
 # Prepare.action
 prepare.success = Baza uspje\u0161no postavljena
+prepare.title = Priprema baze
 
 # Admin
 admin.main.title = Admin
 
-operator.null = Operator se mora zadati!
-operator.role.empty = Operator mora imati zadanu ulogu!
+operator.disabled = Operater je onemogu\u0107en
+operator.notActive = Operater nije aktivan
+operator.null = Operater se mora zadati!
+operator.role.empty = Operater mora imati zadanu ulogu!
 operator.username.exists = Korisni\u010dko ime ve\u0107 postoji!
 operator.username.empty = Korisni\u010dko ime ne smije biti prazno
 operator.username.toLong = Korisni\u010dko ime preduga\u010dko! Max {0}
