Operator UI menu added.

--- a/CChatSmartGWT/src/hr/chus/cchat/client/smartgwt/client/i18n/Dictionary_hr.properties
+++ b/CChatSmartGWT/src/hr/chus/cchat/client/smartgwt/client/i18n/Dictionary_hr.properties
@@ -103,3 +103,6 @@ noItemsToShow = Nema podataka za prikaz
 active = Aktivan
 notActive = Nije aktivan
 wouldYouLikeToActivateYourself = Niste aktivirani. Da li se želite aktivirati?
+totalSmsMessagesInDB = Ukupno sms poruka pronađeno u bazi podataka
+totalUsersInDB = Ukupno korisnika pronašeno u bazi podataka
+userId = Korisnikov jedinstveni broj
