--- a/CChatSmartGWT/src/hr/chus/cchat/client/smartgwt/client/i18n/Dictionary_hr.properties
+++ b/CChatSmartGWT/src/hr/chus/cchat/client/smartgwt/client/i18n/Dictionary_hr.properties
@@ -109,3 +109,5 @@ userId = Korisnikov jedinstveni broj
 myUsers = Moji korisnici
 last48HourUsers = Zadnjih 48h korisnici
 randomUsers = Nasumični korisnici
+lastMsgDate = Datum zadnje poruke
+unreadMsgCount = Broj nepročitanih poruka
