--- a/CChat/src/hr/chus/cchat/struts2/action/package_en.properties
+++ b/CChat/src/hr/chus/cchat/struts2/action/package_en.properties
@@ -10,6 +10,8 @@ global.role = Role
 global.loadingStyleAndImages = Loading styles and images...
 global.loadingApplication = Loading CChat application
 global.pleaseWait = Please wait...
+global.exceptionDescription = Exception
+global.exceptionStack = Exception stack
 
 # Login.action
 login.wrongUsernameOrPassword = Wrong username or password
