--- a/CChat/src/hr/chus/cchat/struts2/action/package_hr.properties
+++ b/CChat/src/hr/chus/cchat/struts2/action/package_hr.properties
@@ -10,6 +10,8 @@ global.role = Uloga
 global.loadingStyleAndImages = U\u010ditavanje izgleda i slika
 global.loadingApplication = U\u010ditavanje CChat aplikacije
 global.pleaseWait = Molimo pri\u010dekajte...
+global.exceptionDescription = Opis pogreske
+global.exceptionStack = Detalji pogreske
 
 # Login.action
 login.wrongUsernameOrPassword = Pogre\u0161no korisni\u010dko ime ili lozinka
