--- a/CChatSmartGWT/src/hr/chus/cchat/client/smartgwt/client/i18n/Dictionary_hr.properties
+++ b/CChatSmartGWT/src/hr/chus/cchat/client/smartgwt/client/i18n/Dictionary_hr.properties
@@ -104,10 +104,11 @@ active = Aktivan
 notActive = Nije aktivan
 wouldYouLikeToActivateYourself = Niste aktivirani. Da li se želite aktivirati?
 totalSmsMessagesInDB = Ukupno sms poruka pronađeno u bazi podataka
-totalUsersInDB = Ukupno korisnika pronašeno u bazi podataka
+totalUsersInDB = Ukupno korisnika pronađeno u bazi podataka
 userId = Korisnikov jedinstveni broj
 myUsers = Moji korisnici
 last48HourUsers = Zadnjih 48h korisnici
 randomUsers = Nasumični korisnici
 lastMsgDate = Datum zadnje poruke
 unreadMsgCount = Broj nepročitanih poruka
+time = Vrijeme
