--- a/CChatSmartGWT/src/hr/chus/cchat/client/smartgwt/client/i18n/Dictionary_hr.properties
+++ b/CChatSmartGWT/src/hr/chus/cchat/client/smartgwt/client/i18n/Dictionary_hr.properties
@@ -112,3 +112,4 @@ randomUsers = Nasumični korisnici
 lastMsgDate = Datum zadnje poruke
 unreadMsgCount = Broj nepročitanih poruka
 time = Vrijeme
+editUser = Uredi korisnika
