Send message implemented for cgateway.

--- a/CChat/src/hr/chus/cchat/struts2/action/package_hr.properties
+++ b/CChat/src/hr/chus/cchat/struts2/action/package_hr.properties
@@ -46,3 +46,13 @@ nick.description.toLong = Opis je preduga\u010dak! Max {0}.
 nick.name.exists = Nadimak ve\u0107 postoji!
 
 admin.picture.upload.alreadyExists = Slika sa tim imenom ve\u0107 postoji!
+
+sendSms.httpException = Dogodila se gre\u0161ka u komunikaciji sa operaterom! Molimo poku\u0161ajte ponovo.
+sendSms.exception = Gre\u0161ka prilikom slanja poruke: {0}
+sendSms.operator.notRecognized = Operater nije prepoznat
+sendSms.operator.mustBeActive = Operater mora biti aktivan
+sendSms.user.notFound = Korisnik nije pronaden
+sendSms.msgType.notDefiend = MsgType nije definiran
+sendSms.text.notNull = Tekst ne smije biti null
+sendSms.serviceProvider.disabled = Nije mogu\u0107e poslati poruku jer operater {0}-{1} je onemogu\u0107en
+sendSms.user.belongsToAnotherOperator = Nije mogu\u0107e poslati poruku jer korisnik pripada operateru {0}
