--- a/CChat/src/hr/chus/cchat/struts2/action/package_en.properties
+++ b/CChat/src/hr/chus/cchat/struts2/action/package_en.properties
@@ -46,3 +46,13 @@ nick.description.toLong = Description is too long! Max {0}.
 nick.name.exists = Nick name already exists.
 
 admin.picture.upload.alreadyExists = Picture with that name already exists!
+
+sendSms.httpException = Gateway communication error! Please try again later.
+sendSms.exception = Error while sending message: {0}
+sendSms.operator.notRecognized = Operator not recognized
+sendSms.operator.mustBeActive = Operator must be active
+sendSms.user.notFound = User not found
+sendSms.msgType.notDefiend = MsgType not specified
+sendSms.text.notNull = Text must not be null
+sendSms.serviceProvider.disabled = Unable to send message because service provider {0}-{1} is disabled
+sendSms.user.belongsToAnotherOperator = Can't send message because user belongs to {0}
