Improvements and added send message boxes.

--- a/CChatSmartGWT/src/hr/chus/cchat/client/smartgwt/client/i18n/Dictionary_hr.properties
+++ b/CChatSmartGWT/src/hr/chus/cchat/client/smartgwt/client/i18n/Dictionary_hr.properties
@@ -113,3 +113,5 @@ lastMsgDate = Datum zadnje poruke
 unreadMsgCount = Broj nepročitanih poruka
 time = Vrijeme
 editUser = Uredi korisnika
+messageSentSuccessfully = Poruka uspješno poslana
+sendingMessageFailed = Greška kod slanja poruke
