Improvements and refactoring. SmartGWT 2.4.

--- a/CChat/src/hr/chus/cchat/struts2/action/package_en.properties
+++ b/CChat/src/hr/chus/cchat/struts2/action/package_en.properties
@@ -23,6 +23,9 @@ login.userIsDisabled = This user is disabled
 prepare.success = Database successfully set
 prepare.title = Prepare database
 
+operation.empty = Parameter operation must not be empty
+operation.notSupported = Operation not supported
+
 # Admin
 admin.main.title = Admin
 
@@ -38,6 +41,10 @@ operator.name.toLong = Name is too long! Max {0}
 operator.surname.toLong = Surname is too long! Max {0}
 operator.email.toLong = E-mail is too long! Max {0}
 operator.admin.cantBeDisabled = Admin user can't be disabled
+operator.deleteNotAllowed.linkedToMessages = Operator can't be deleted because he is linked to messages. You can only disable this user
+operator.canNotBeDeleted = Operator can't be deleted
+
+user.notAllowedToEdit = You don't own the user or you are trying to change assigned operator
 
 nick.null = Nick name must be defied!
 nick.name.empty = Nick name must not be empty.
