--- a/CChat/src/hr/chus/cchat/struts2/action/package_hr.properties
+++ b/CChat/src/hr/chus/cchat/struts2/action/package_hr.properties
@@ -23,6 +23,9 @@ login.userIsDisabled = Korisnik je onemogu\u0107en
 prepare.success = Baza uspje\u0161no postavljena
 prepare.title = Priprema baze
 
+operation.empty = Parametar operation ne smije biti prazan
+operation.notSupported = Operacija nije podrzana
+
 # Admin
 admin.main.title = Admin
 
@@ -37,7 +40,11 @@ operator.password.toLong = Lozinka je preduga\u010dka! Max {0}
 operator.name.toLong = Ime je preduga\u010dko! Max {0}
 operator.surname.toLong = Prezime je preduga\u010dko! Max {0}
 operator.email.toLong = E-Mail je preduga\u010dak! Max {0}
-operator.admin.cantBeDisabled = Korisnik admin ne moze biti onemogu\u0107en
+operator.admin.cantBeDisabled = Operater admin ne moze biti onemogu\u0107en
+operator.deleteNotAllowed.linkedToMessages = Operater ne moze biti izbrisan jer ima dodijeljenih poruka. Moze jedino biti onemogu\u0107en
+operator.canNotBeDeleted = Operater ne moze biti obrisan
+
+user.notAllowedToEdit = Korisnik ne moze biti ureden jer niste vlasnik ili poku\u0161avate promijeniti operatera
 
 nick.null = Nadimak se mora zadati!
 nick.name.empty = Nadimak se mora zadati!
