--- a/CChatSmartGWT/src/hr/chus/cchat/client/smartgwt/client/i18n/Dictionary_hr.properties
+++ b/CChatSmartGWT/src/hr/chus/cchat/client/smartgwt/client/i18n/Dictionary_hr.properties
@@ -115,3 +115,5 @@ time = Vrijeme
 editUser = Uredi korisnika
 messageSentSuccessfully = Poruka uspješno poslana
 sendingMessageFailed = Greška kod slanja poruke
+keyword = Ključna riječ
+external = Vanjski
