--- a/CChat/src/MessageResources_hr.properties
+++ b/CChat/src/MessageResources_hr.properties
@@ -1,3 +1,3 @@
 struts.messages.error.uploading = Greska prilikom postavljanja datoteke: {0}
 struts.messages.error.file.too.large = Datoteka je prevelika: {1}, Velicina: {3} bytes. Dozvoljeno 35840 bytes (35Kb). 
-struts.messages.error.content.type.not.allowed = Tipa datoteke {1} nije dozvoljen.,+8
+struts.messages.error.content.type.not.allowed = Tipa datoteke {1} nije dozvoljen.
