--- a/CChat/src/hr/chus/cchat/struts2/action/package_en.properties
+++ b/CChat/src/hr/chus/cchat/struts2/action/package_en.properties
@@ -40,11 +40,11 @@ operator.password.toLong = Password is too long! Max {0}
 operator.name.toLong = Name is too long! Max {0}
 operator.surname.toLong = Surname is too long! Max {0}
 operator.email.toLong = E-mail is too long! Max {0}
-operator.admin.cantBeDisabled = Admin user can't be disabled
-operator.deleteNotAllowed.linkedToMessages = Operator can't be deleted because he is linked to messages. You can only disable this user
-operator.canNotBeDeleted = Operator can't be deleted
+operator.admin.cantBeDisabled = Admin user can not be disabled
+operator.deleteNotAllowed.linkedToMessages = Operator can not be deleted because he is linked to messages. You can only disable this user
+operator.canNotBeDeleted = Operator can not be deleted
 
-user.notAllowedToEdit = You don't own the user or you are trying to change assigned operator
+user.notAllowedToEdit = You do not own the user or you are trying to change assigned operator
 
 nick.null = Nick name must be defied!
 nick.name.empty = Nick name must not be empty.
@@ -62,4 +62,4 @@ sendSms.user.notFound = User not found
 sendSms.msgType.notDefiend = MsgType not specified
 sendSms.text.notNull = Text must not be null
 sendSms.serviceProvider.disabled = Unable to send message because service provider {0}-{1} is disabled
-sendSms.user.belongsToAnotherOperator = Can't send message because user belongs to {0}
+sendSms.user.belongsToAnotherOperator = Can not send message because user belongs to {0}
