- bot ui test console - ref #19

--- a/CChatSmartGWT/src/main/java/hr/chus/cchat/client/smartgwt/client/i18n/Dictionary_hr.properties
+++ b/CChatSmartGWT/src/main/java/hr/chus/cchat/client/smartgwt/client/i18n/Dictionary_hr.properties
@@ -117,3 +117,4 @@ messageSentSuccessfully = Poruka uspješno poslana
 sendingMessageFailed = Greška kod slanja poruke
 keyword = Ključna riječ
 external = Vanjski
+bot = Bot
