refs #23, #24, #25 - link chatbot with user console

--- a/CChatSmartGWT/src/main/java/hr/chus/cchat/client/smartgwt/client/i18n/Dictionary_hr.properties
+++ b/CChatSmartGWT/src/main/java/hr/chus/cchat/client/smartgwt/client/i18n/Dictionary_hr.properties
@@ -118,3 +118,5 @@ sendingMessageFailed = Greška kod slanja poruke
 keyword = Ključna riječ
 external = Vanjski
 bot = Bot
+sendBotMessage = Pošalji poruku bota
+noBotSelected = Bot nije odabran
