- implemented UI multilanguage support (route messages to operators based on language determined from msisdn prefix rules) - refs #27, #29

--- a/CChatSmartGWT/src/main/java/hr/chus/cchat/client/smartgwt/client/i18n/Dictionary_hr.properties
+++ b/CChatSmartGWT/src/main/java/hr/chus/cchat/client/smartgwt/client/i18n/Dictionary_hr.properties
@@ -120,3 +120,15 @@ external = Vanjski
 bot = Bot
 sendBotMessage = Pošalji poruku bota
 noBotSelected = Bot nije odabran
+languages = Jezik
+msisdnRouting = MSISDN usmjeravanje
+langShortCode = Kratki kod
+providerName = Ime
+serviceName = Ime servisa
+billingAmount = Cijena
+sendServiceBeanName = Ime beana za slanje
+autoCreated = Automatski stvoreno
+languageProviderPrefix = Prefix jezika
+msisdnPrefix = MSISDN prefiks
+prefix = prefiks
+language = Jezik
