- receive sms -> service provider if first checked by sc and provider name and if not found language match is checked - max allowed chars implemented -> for ASCII chars 160, and for Unicode 70 - refs #27, #30

--- a/CChat/src/main/java/hr/chus/cchat/struts2/action/package_en.properties
+++ b/CChat/src/main/java/hr/chus/cchat/struts2/action/package_en.properties
@@ -61,5 +61,6 @@ sendSms.operator.mustBeActive = Operator must be active
 sendSms.user.notFound = User not found
 sendSms.msgType.notDefiend = MsgType not specified
 sendSms.text.notNull = Text must not be null
+sendSms.text.tooLong = Text is to long. Max allowed {0}
 sendSms.serviceProvider.disabled = Unable to send message because service provider {0}-{1} is disabled
 sendSms.user.belongsToAnotherOperator = Can not send message because user belongs to {0}
