--- a/CChat/src/main/java/hr/chus/cchat/struts2/action/package_hr.properties
+++ b/CChat/src/main/java/hr/chus/cchat/struts2/action/package_hr.properties
@@ -61,5 +61,6 @@ sendSms.operator.mustBeActive = Operater mora biti aktivan
 sendSms.user.notFound = Korisnik nije pronaden
 sendSms.msgType.notDefiend = MsgType nije definiran
 sendSms.text.notNull = Tekst ne smije biti null
+sendSms.text.tooLong = Text je preduga\u010Dak. Dozvoljeno {0} znakova.
 sendSms.serviceProvider.disabled = Nije mogu\u0107e poslati poruku jer operater {0}-{1} je onemogu\u0107en
 sendSms.user.belongsToAnotherOperator = Nije mogu\u0107e poslati poruku jer korisnik pripada operateru {0}
